# TurtleBot-Swarm-AI

./: .gitignore  README.md  main.py
AIAgents/: AIAgents_README.md  aiAgentsMain.py  aiAgentsTests.py  camera_calibration.py  camercali.py  requirements.txt
AprilTags/: AprilTags_README.MD  aprilTagAndYolo.py  camera_testing.py  pic.py  requirements.txt  visualizeAprilTag.py
MissionDashBoard/: readme.txt
Mongo/: Mongo_README.md  TopicStatus.py  Topics.py  check_latest_entries.py  log_pose_data.py  logger.py  mock_mongodb_logger.py  requirements.txt  test_connection.py
MultiCastHMAC/: Broadcast.py  MultiCastHMAC.MD  Receiver.py  UnicastComm.py
Redis/: Redis_README.md  redis_data_upload.py
Startup/: requirements.txt  startup_pos.py
SwarmAI/: SwarmAI_README.md  approach_charm.py  coordinate_navigator.py  graph_objects.py  object_avoid_testing_sonic.py  requirements.txt  temp2_obj_avoid.py  temp_object_avoid_testing_sonic.py
Ultrasonic/: Object_Detection.py  Ultrasonic_README.md  ultrasonic_redis_logger.py  ultrasonic_subscriber.py
Ultrasonic/ultrasonic/: package.xml  setup.py
Ultrasonic/ultrasonic/ultrasonic/: rpi_interface.py  ultrasonic_publisher.py  ultrasonic_subscriber.py
Yolo/: FlaggingTest.py  Yolo_README.md  detect.py  detect_onnx.py  detect_source_camera.py
Yolo/onnx/: ONNXProcessor.py  __init__.py  utils.py
